[gd_scene load_steps=2 format=3 uid="uid://5d03gyj5ss2q"]

[ext_resource type="Script" uid="uid://db85moysxgvk0" path="res://scripts/managers/hud_manager.gd" id="1_gx5kp"]

[node name="HUD" type="CanvasLayer"]

[node name="MainContainer" type="Control" parent="."]
custom_minimum_size = Vector2(0, 120)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_gx5kp")

[node name="VerticalStack" type="VBoxContainer" parent="MainContainer"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 0
alignment = 2

[node name="BottomBar" type="PanelContainer" parent="MainContainer"]
self_modulate = Color(0.101960786, 0.101960786, 0.101960786, 1)
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.9760001
anchor_right = 0.5
anchor_bottom = 0.9760001
offset_left = -361.0
offset_top = -88.08008
offset_right = 361.0
offset_bottom = 11.919922
grow_horizontal = 2
grow_vertical = 0

[node name="CategoryBox" type="HBoxContainer" parent="MainContainer/BottomBar"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="BtnSifones" type="Button" parent="MainContainer/BottomBar/CategoryBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "SIFONES"
clip_text = true

[node name="VSeparator2" type="VSeparator" parent="MainContainer/BottomBar/CategoryBox"]
layout_mode = 2

[node name="BtnPrismas" type="Button" parent="MainContainer/BottomBar/CategoryBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "PRISMAS"
clip_text = true

[node name="VSeparator3" type="VSeparator" parent="MainContainer/BottomBar/CategoryBox"]
layout_mode = 2

[node name="BtnManipula" type="Button" parent="MainContainer/BottomBar/CategoryBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "MANIPULA"
clip_text = true

[node name="VSeparator4" type="VSeparator" parent="MainContainer/BottomBar/CategoryBox"]
layout_mode = 2

[node name="BtnConstruct" type="Button" parent="MainContainer/BottomBar/CategoryBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "CONSTR"
clip_text = true

[node name="VSeparator5" type="VSeparator" parent="MainContainer/BottomBar/CategoryBox"]
layout_mode = 2

[node name="BtnGuardar" type="Button" parent="MainContainer/BottomBar/CategoryBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "SOLTAR"
clip_text = true

[node name="Spacer" type="Control" parent="MainContainer/BottomBar/CategoryBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.86

[node name="BtnEliminar" type="Button" parent="MainContainer/BottomBar/CategoryBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "ELIMINAR"
clip_text = true
